--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     <div class="contact_control">
                         <label for="name" class="visually-hidden">Name</label>
                         <input type="text" id="name" name="name" placeholder="Name" required />
-                        <img src="/Images/icon-invalid.svg" class="contact_invalid-icon" alt="">
+                        <img src="./Images/icon-invalid.svg" class="contact_invalid-icon" alt="">
                     </div>
                     <div class="contact_control">
                         <label for="email" class="visually-hidden">Email</label>
@@ -231,21 +231,21 @@
                             
                         From Ajayi Toheeb">
                         <input type="email" id="email" name="email" placeholder="Email" required />
-                        <img src="/Images/icon-invalid.svg" class="contact_invalid-icon" alt="">
+                        <img src="./Images/icon-invalid.svg" class="contact_invalid-icon" alt="">
                     </div>
                     <div class="contact_control">
                         <label for="message" class="visually-hidden">Message</label>
 
                         <textarea name="message" id="message" cols="30" rows="3" placeholder="Message"
                             required></textarea>
-                        <img src="/Images/icon-invalid.svg" class="contact_invalid-icon" alt="">
+                        <img src="./Images/icon-invalid.svg" class="contact_invalid-icon" alt="">
                     </div>
                     <div class="contact_control align-right">
                         <button type="submit">Send Message</button>
                     </div>
                 </form>
 
-                <img src="/Images/pattern-rings.svg" class="contact_ring" alt="">
+                <img src="./Images/pattern-rings.svg" class="contact_ring" alt="">
             </div>
 
         </section>
@@ -259,8 +259,10 @@
                 </h2>
 
                 <ul class="header_lists" role="list">
+
+                    <!-- GitHub -->
                     <li>
-                        <a href="" class="header_social">
+                        <a href="https://github.com/Fearless09" target="_blank" class="header_social">
                             <svg xmlns="http://www.w3.org/2000/svg" width="25" height="24"
                                 aria-labelledby="socialGitHub" role="img">
                                 <title id="socialGitHub">GitHub</title>
@@ -270,8 +272,10 @@
                         </a>
                     </li>
 
+                    <!-- FrontEnd Mentor -->
                     <li>
-                        <a href="" class="header_social">
+                        <a href="https://www.frontendmentor.io/profile/Fearless09" target="_blank"
+                            class="header_social">
                             <svg xmlns="http://www.w3.org/2000/svg" width="26" height="23"
                                 aria-labelledby="socialFrontendMentor" role="img">
                                 <title id="socialFrontendMentor">Frontend Mentor</title>
@@ -281,8 +285,10 @@
                         </a>
                     </li>
 
+                    <!-- LinkedIn -->
                     <li>
-                        <a href="" class="header_social">
+                        <a href="https://www.linkedin.com/in/toheeb-opeyemi-83a6b7195/" target="_blank"
+                            class="header_social">
                             <svg xmlns="http://www.w3.org/2000/svg" width="25" height="24"
                                 aria-labelledby="socialLinkedIn" role="img">
                                 <title id="socialLinkedIn">LinkedIn</title>
@@ -292,8 +298,9 @@
                         </a>
                     </li>
 
+                    <!-- Twitter -->
                     <li>
-                        <a href="" class="header_social">
+                        <a href="https://twitter.com/Toheebopeyemi99" target="_blank" class="header_social">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="20"
                                 aria-labelledby="socialTwitter" role="img">
                                 <title id="socialTwitter">Twitter</title>
