--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
                             <span>JAVASCRIPT</span>
                         </p>
                         <div class="projects_links">
-                            <a href="" class="underline">View Project</a>
-                            <a href="" class="underline">View Code</a>
+                            <a href="https://fearless09.github.io/Blogr/" class="underline">View Project</a>
+                            <a href="https://github.com/Fearless09/Blogr" class="underline">View Code</a>
                         </div>
                     </div>
 
@@ -198,8 +198,8 @@
                             <span>JAVASCRIPT</span>
                         </p>
                         <div class="projects_links">
-                            <a href="" class="underline">View Project</a>
-                            <a href="" class="underline">View Code</a>
+                            <a href="https://fearless09.github.io/Calculator-App/" class="underline">View Project</a>
+                            <a href="https://github.com/Fearless09/Calculator-App" class="underline">View Code</a>
                         </div>
                     </div>
 
@@ -213,8 +213,8 @@
                             <span>JAVASCRIPT</span>
                         </p>
                         <div class="projects_links">
-                            <a href="" class="underline">View Project</a>
-                            <a href="" class="underline">View Code</a>
+                            <a href="https://fearless09.github.io/tip-calculator-app-main/" class="underline">View Project</a>
+                            <a href="https://github.com/Fearless09/tip-calculator-app-main" class="underline">View Code</a>
                         </div>
                     </div>
 
@@ -228,8 +228,8 @@
                             <span>JAVASCRIPT</span>
                         </p>
                         <div class="projects_links">
-                            <a href="" class="underline">View Project</a>
-                            <a href="" class="underline">View Code</a>
+                            <a href="https://fearless09.github.io/ecommerce-product-page-main/" class="underline">View Project</a>
+                            <a href="https://github.com/Fearless09/ecommerce-product-page-main" class="underline">View Code</a>
                         </div>
                     </div>
 
@@ -243,8 +243,8 @@
                             <span>JAVASCRIPT</span>
                         </p>
                         <div class="projects_links">
-                            <a href="" class="underline">View Project</a>
-                            <a href="" class="underline">View Code</a>
+                            <a href="https://fearless09.github.io/room-homepage/" class="underline">View Project</a>
+                            <a href="https://github.com/Fearless09/room-homepage" class="underline">View Code</a>
                         </div>
                     </div>
 
@@ -258,8 +258,8 @@
                             <!-- <span>JAVASCRIPT</span> -->
                         </p>
                         <div class="projects_links">
-                            <a href="" class="underline">View Project</a>
-                            <a href="" class="underline">View Code</a>
+                            <a href="https://fearless09.github.io/time-tracking-dashboard-main/" class="underline">View Project</a>
+                            <a href="https://github.com/Fearless09/time-tracking-dashboard-main" class="underline">View Code</a>
                         </div>
                     </div>
                 </div>
