--- a/index.html
+++ b/index.html
@@ -295,9 +295,7 @@
                     </div>
                     <div class="contact_control">
                         <label for="email" class="visually-hidden">Email</label>
-                        <input type="hidden" name="_autoresponse" value="Thank you for reaching out to me. Your message has been received and will be responded to.
-                            
-                        From Ajayi Toheeb">
+                        <input type="hidden" name="_autoresponse" value="Thank you for reaching out to me. Your message has been received and will be responded to. From Ajayi Toheeb">
                         <input type="email" id="email" name="email" placeholder="Email" required />
                         <img src="./Images/icon-invalid.svg" class="contact_invalid-icon" alt="">
                     </div>
