--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
         integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
 
-    
+
     <link rel='stylesheet' type='text/css' media='screen' href='./css/main.css'>
 
 </head>
@@ -85,12 +85,15 @@
                             </svg>
                         </a>
                     </li>
+
+                    <!-- Download Resume -->
+                    <li>
+                        <a href="/cv-document.pdf" target="_blank"
+                            class="resume-btn btn btn-success px-3 fw-bold">RESUME</a>
+                    </li>
                 </ul>
             </nav>
         </div>
-
-
-
     </header>
 
     <main id="main">
@@ -135,6 +138,11 @@
 
                     <p class="hero_description">Based in Nigeria, I'm a front-end devoloper passionate about building
                         accessible web apps that users love.</p>
+                    <div class="hero_details">
+                        <p>toheebopeyemi9@gmail.com</p>
+                        <span class=""></span>
+                        <p>+234 8107344315</p>
+                    </div>
 
                     <a href="#contact" class="hero_contact | underline">Contact me</a>
                 </div>
@@ -147,27 +155,39 @@
             <div class="wrapper skills_wrapper">
                 <div class="skills_item">
                     <h3 class="skills_title">HTML</h3>
-                    <p class="skills_description">2 Years Experience</p>
+                    <!-- <p class="skills_description">2 Years Experience</p> -->
                 </div>
                 <div class="skills_item">
                     <h3 class="skills_title">CSS</h3>
-                    <p class="skills_description">2 Years Experience</p>
+                    <!-- <p class="skills_description">2 Years Experience</p> -->
                 </div>
                 <div class="skills_item">
                     <h3 class="skills_title">JavaScript</h3>
-                    <p class="skills_description">2 Years Experience</p>
+                    <!-- <p class="skills_description">2 Years Experience</p> -->
                 </div>
                 <div class="skills_item">
                     <h3 class="skills_title">Accessibility</h3>
-                    <p class="skills_description">2 Years Experience</p>
+                    <!-- <p class="skills_description">2 Years Experience</p> -->
                 </div>
                 <div class="skills_item">
-                    <h3 class="skills_title">React</h3>
-                    <p class="skills_description">1 Years Experience</p>
+                    <h3 class="skills_title">ReactJs</h3>
+                    <!-- <p class="skills_description">1 Years Experience</p> -->
+                </div>
+                <div class="skills_item">
+                    <h3 class="skills_title">NextJs</h3>
+                    <!-- <p class="skills_description">1 Years Experience</p> -->
+                </div>
+                <div class="skills_item">
+                    <h3 class="skills_title">TailwindCSS</h3>
+                    <!-- <p class="skills_description">1 Years Experience</p> -->
                 </div>
                 <div class="skills_item">
                     <h3 class="skills_title">Bootstrap</h3>
-                    <p class="skills_description">1 Years Experience</p>
+                    <!-- <p class="skills_description">1 Years Experience</p> -->
+                </div>
+                <div class="skills_item">
+                    <h3 class="skills_title">Typescript</h3>
+                    <!-- <p class="skills_description">1 Years Experience</p> -->
                 </div>
 
                 <img src="./Images/pattern-rings.svg" class="skills_ring" alt="">
@@ -223,8 +243,10 @@
                             <span>JAVASCRIPT</span>
                         </p>
                         <div class="projects_links">
-                            <a href="https://fearless09.github.io/tip-calculator-app-main/" class="underline">View Project</a>
-                            <a href="https://github.com/Fearless09/tip-calculator-app-main" class="underline">View Code</a>
+                            <a href="https://fearless09.github.io/tip-calculator-app-main/" class="underline">View
+                                Project</a>
+                            <a href="https://github.com/Fearless09/tip-calculator-app-main" class="underline">View
+                                Code</a>
                         </div>
                     </div>
 
@@ -238,8 +260,10 @@
                             <span>JAVASCRIPT</span>
                         </p>
                         <div class="projects_links">
-                            <a href="https://fearless09.github.io/ecommerce-product-page-main/" class="underline">View Project</a>
-                            <a href="https://github.com/Fearless09/ecommerce-product-page-main" class="underline">View Code</a>
+                            <a href="https://fearless09.github.io/ecommerce-product-page-main/" class="underline">View
+                                Project</a>
+                            <a href="https://github.com/Fearless09/ecommerce-product-page-main" class="underline">View
+                                Code</a>
                         </div>
                     </div>
 
@@ -268,8 +292,10 @@
                             <!-- <span>JAVASCRIPT</span> -->
                         </p>
                         <div class="projects_links">
-                            <a href="https://fearless09.github.io/time-tracking-dashboard-main/" class="underline">View Project</a>
-                            <a href="https://github.com/Fearless09/time-tracking-dashboard-main" class="underline">View Code</a>
+                            <a href="https://fearless09.github.io/time-tracking-dashboard-main/" class="underline">View
+                                Project</a>
+                            <a href="https://github.com/Fearless09/time-tracking-dashboard-main" class="underline">View
+                                Code</a>
                         </div>
                     </div>
                 </div>
@@ -295,7 +321,8 @@
                     </div>
                     <div class="contact_control">
                         <label for="email" class="visually-hidden">Email</label>
-                        <input type="hidden" name="_autoresponse" value="Thank you for reaching out to me. Your message has been received and will be responded to. From Ajayi Toheeb">
+                        <input type="hidden" name="_autoresponse"
+                            value="Thank you for reaching out to me. Your message has been received and will be responded to. From Ajayi Toheeb">
                         <input type="email" id="email" name="email" placeholder="Email" required />
                         <img src="./Images/icon-invalid.svg" class="contact_invalid-icon" alt="">
                     </div>
