--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
                     <!-- Download Resume -->
                     <li>
-                        <a href="/cv-document.pdf" target="_blank"
+                        <a href="./cv-document.pdf" target="_blank"
                             class="resume-btn btn btn-success px-3 fw-bold">RESUME</a>
                     </li>
                 </ul>
